<resources>
    <string name="app_name">PhoneDialler</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_star">*</string>
    <string name="_0">0</string>
    <string name="_hash">#</string>
    <string name="_5">5</string>
    <string name="delete_btn_description">Deletes a digit from phone number</string>
    <string name="call_btn_description">Call phone number</string>
    <string name="endcall_btn_description">Closes the app</string>
    <string name="phone_number_textbox_hint">Phone Number:</string>
    <string name="acceleration_default">Ox: 0.0 m/s²</string>
    <string name="access_contacts_manager">Access contacts manager</string>
    <string name="phone_error">ERROR: Not a valid phone number</string>
</resources>