<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#FEF7FF"
    android:padding="16dp">

    <TextView
        android:id="@+id/accelerationOx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/acceleration_default"
        android:textSize="25sp"
        android:textColor="@color/pink"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="66dp" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_textbox_hint"
        android:textColor="@color/pink"
        android:textSize="20sp"
        tools:ignore="TextFields" />

    <ImageButton
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/delete_btn_description"
        android:maxWidth="48dp"
        android:maxHeight="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/delete" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:padding="16dp"
        android:rowCount="4">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_3"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_4"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_5"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/_6"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnstar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_star"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnhash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_hash"
            android:textStyle="bold" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/callBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/call_btn_description"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/call" />

        <ImageButton
            android:id="@+id/endCallBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/endcall_btn_description"
            android:adjustViewBounds="true"
            android:background="@null"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:scaleType="fitCenter"
            android:src="@drawable/closed" />
    </LinearLayout>

</LinearLayout>